- 09-01-04: Event\\Event_Making.txt - Updated Payon Npc's placement. [Muad_Dib] - 09-01-04: Event\\Event_MrSmile.txt - Updated Payon Npc's placement. [Muad_Dib] - 09-01-04: Event\\Event_NGuild.txt - Updated Payon Npc's placement. [Muad_Dib] - 09-01-04: Event\\Event_Nenkaras.txt - Updated Npc location and savepoint. [Muad_Dib] - 09-01-04: Event\\Event_PVP.txt - Updated Payon Npc Map placement. [Muad_Dib] - 09-01-04: Event\\Event_Potion.txt - Updated Payon Npc Map placement. [Muad_Dib] - 09-01-04: GvG\\nguild_pay.txt - Updated Kafra warp location. [Muad_Dib] - 09-01-04: GvG\\payg_cas0X.txt - Updated Kafra warp location. [Muad_Dib] - 09-01-04: Job\\Job_2-1/Job2_Blacksmith.txt - Updated Payon Npc Map placement. [Muad_Dib] - 09-01-04: Quest\\Quest_Pet_Food_Quest.txt - Updated Payon Npc Map placement. [Muad_Dib] - 09-01-04: Quest\\Quest_skill\\Charged_Arrow.txt - Updated Payon Npc Map placement. [Muad_Dib] - 09-01-04: Quest\\Quest_skill\\Thief_Skill.txt - Updated Payon Npc Map placement. [Muad_Dib] - 09-01-04: Shop\\payon.txt - Updated Payon Shop placement. [Muad_Dib] - 09-01-04: Town\\Town_Guide.txt - Updated Payon Npc's placement and guide map locations. [Muad_Dib] - 09-01-04: Town\\Town_Kafra.txt - Updated Payon Npc's placement, warp and save locations. [Muad_Dib] - 09-01-04: Town\\Town_Payon.txt - Updated Payon Npc's placement. [Muad_Dib] - 09-01-04: Town\\Town_Siglude.txt - Updated Payon Npc Map placement. [Muad_Dib] - 09-01-04: Warp\\towns\\Payon.txt - Updated Payon warps should be finished for now. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2271 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,24 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 09-01-04: Event\Event_Making.txt - Updated Payon Npc's placement. [Muad_Dib]
+- 09-01-04: Event\Event_MrSmile.txt - Updated Payon Npc's placement. [Muad_Dib]
+- 09-01-04: Event\Event_NGuild.txt - Updated Payon Npc's placement. [Muad_Dib]
+- 09-01-04: Event\Event_Nenkaras.txt - Updated Npc location and savepoint. [Muad_Dib]
+- 09-01-04: Event\Event_PVP.txt - Updated Payon Npc Map placement. [Muad_Dib]
+- 09-01-04: Event\Event_Potion.txt - Updated Payon Npc Map placement. [Muad_Dib]
+- 09-01-04: GvG\nguild_pay.txt - Updated Kafra warp location. [Muad_Dib]
+- 09-01-04: GvG\payg_cas0X.txt - Updated Kafra warp location. [Muad_Dib]
+- 09-01-04: Job\Job_2-1/Job2_Blacksmith.txt - Updated Payon Npc Map placement. [Muad_Dib]
+- 09-01-04: Quest\Quest_Pet_Food_Quest.txt - Updated Payon Npc Map placement. [Muad_Dib]
+- 09-01-04: Quest\Quest_skill\Charged_Arrow.txt - Updated Payon Npc Map placement. [Muad_Dib]
+- 09-01-04: Quest\Quest_skill\Thief_Skill.txt - Updated Payon Npc Map placement. [Muad_Dib]
+- 09-01-04: Shop\payon.txt - Updated Payon Shop placement. [Muad_Dib]
+- 09-01-04: Town\Town_Guide.txt - Updated Payon Npc's placement and guide map locations. [Muad_Dib]
+- 09-01-04: Town\Town_Kafra.txt - Updated Payon Npc's placement, warp and save locations. [Muad_Dib]
+- 09-01-04: Town\Town_Payon.txt - Updated Payon Npc's placement. [Muad_Dib]
+- 09-01-04: Town\Town_Siglude.txt - Updated Payon Npc Map placement. [Muad_Dib]
+- 09-01-04: Warp\towns\Payon.txt - Updated Payon warps should be finished for now. [Muad_Dib]
 - 08-30-04: GvG\npc_gflag.txt - Disabled old river flags because new Payon river is too small. Looking for new spot. [Tsusai]
 - 08-30-04: GvG\npc_gflag.txt - Relocated castle side flags for new Payon map. [Tsusai]
 - 08-30-04: Warp\towns\Payon.txt - Current progress in the new payon warps. [Muad_Dib]
