--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 09-08-04: Event\Event_Rental.txt - Fixed option checks. [Muad_Dib]
 - 09-08-04: Warp\other\Force_Map.txt - Updated warping destination. [Tsusai]
 - 09-08-04: Quest\Quest_Arena_Test.txt - Updated warping destination. [Tsusai]
 - 09-08-04: Job\Job_1-1\Job1_Swordsman.txt - fixed getitem to additem. [Tsusai]
