--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,9 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 09-09-04: Quest\Quest_skill\Charged_Arrow.txt - Moved Quest Npc. [Muad_Dib]
+- 09-09-04: Shop\payon.txt - Moved tool dealer. [Muad_Dib]
+- 09-09-04: Town\Town_Siglude.txt - added temporarily Repairman npc's. [Muad_Dib]
 - 09-08-04: Event\Event_Rental.txt - Fixed option checks. [Muad_Dib]
 - 09-08-04: Warp\other\Force_Map.txt - Updated warping destination. [Tsusai]
 - 09-08-04: Quest\Quest_Arena_Test.txt - Updated warping destination. [Tsusai]
