- 09-09-04: Town\\Town_Siglude.txt - Added missing Juno metal seller and, added temporarily Repairman npc's. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2288 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 09-09-04: Town\Town_Siglude.txt - Added missing Juno metal seller and, added temporarily Repairman npc's. [Muad_Dib]
 - 09-09-04: Quest\Quest_skill\Charged_Arrow.txt - Moved Quest Npc. [Muad_Dib]
 - 09-09-04: Shop\payon.txt - Moved tool dealer. [Muad_Dib]
 - 09-09-04: Town\Town_Siglude.txt - added temporarily Repairman npc's. [Muad_Dib]
