--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 09-12-04: Town\Town_Prontera.txt - Updated header and added new sprite for a npc. [Muad_Dib]
 - 09-12-04: Event\Event_PvP.txt - Fixed a few menu options by adding a , [Muad_Dib
 - 09-12-04: GvG\nguild_###.txt - Added missing ; to close a few lines properly. [Muad_Dib]
 - 09-12-04: GvG\gefg_cas0#.txt - Added missing ; to close a few lines properly. [Muad_Dib]
