- 09-15-04: Removed translated npc_event_arrow. [Muad_Dib] - 09-15-04: Removed translated npc_event_pumpkin. [Muad_Dib] - 09-15-04: Removed translated npc_job_alche. [Muad_Dib] - 09-15-04: Removed translated npc_town_umbala. [Muad_Dib] - 09-15-04: Removed translated npc_town_kafra. [Muad_Dib] - 09-15-04: Removed translated npc_town_lutie. [Muad_Dib] - 09-15-04: Removed translated npc_job_2nd. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2299 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Japanese Scripts/Changelog.txt
+++ b/Scripts/Japanese Scripts/Changelog.txt
@@ -1,6 +1,13 @@
 --------------------------------------------------------------------------------
- Fusion 1.212 - June 30th, 2004
+ - Japanese scripts changelog
 --------------------------------------------------------------------------------
+- 09-15-04: Removed translated npc_event_arrow. [Muad_Dib]
+- 09-15-04: Removed translated npc_event_pumpkin. [Muad_Dib]
+- 09-15-04: Removed translated npc_job_alche. [Muad_Dib]
+- 09-15-04: Removed translated npc_town_umbala. [Muad_Dib]
+- 09-15-04: Removed translated npc_town_kafra. [Muad_Dib]
+- 09-15-04: Removed translated npc_town_lutie. [Muad_Dib]
+- 09-15-04: Removed translated npc_job_2nd. [Muad_Dib]
 - 06-20-04: Removed translated npc_town_guide, I put it in Town_Guide.txt [Muad_Dib]
 - 06-20-04: Moved translated npc_job_sage to the translated folder. [Muad_Dib]
 - 06-16-04: Removed translated npc_event_alchemist, I added it as Event_Alchemist.txt. [Muad_Dib]
