- 09-16-04:  - Actually commiting the scripts works better [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2301 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Japanese Scripts/Changelog.txt
+++ b/Scripts/Japanese Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  - Japanese scripts changelog
 --------------------------------------------------------------------------------
+- 09-16-04: Added translated Rogue.txt. - Actually commiting the scripts work better [Muad_Dib]
 - 09-15-04: Added translated Rogue.txt. - by eathena [Muad_Dib]
 - 09-15-04: Added untranslated npc_town_gonryun.txt - newer version. [Muad_Dib]
 - 09-15-04: Added untranslated npc_town_comodo.txt - newer version. [Muad_Dib]
