--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 09-19-04: Warps\Towns\yuno.txt - Fixed a destination. [Tsusai]
 - 09-18-04: Mob\Old_Mob.rar - Added rar file with old mobs. [Muad_Dib]
 - 09-18-04: Mob\field\xxx_fild.txt - Updated with kRO based spawns. [Muad_Dib]
 - 09-18-04: Mob\dungeon\xxx_dun.txt - Updated with kRO based spaens. [Muad_Dib]
