--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 09-25-04: Mob\dungeon\gld_dun.txt - Fixed DoppelGanger spawn. [Tsusai]
 - 09-21-04: Town\Town_Jawaii.txt - Added English jawaii. [Muad_Dib]
 - 09-21-04: Town\Town_Guide.txt - Added English Niflheim guide. [Muad_Dib]
 - 09-21-04: Mob\other\town_rose.txt - Added Wild Roses in towns. [Muad_Dib]
